--- a/WebDev/saint-james-place/package.json
+++ b/WebDev/saint-james-place/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.8",
     "framer-motion": "^12.33.0",
     "mongodb": "^6.21.0",
     "next": "16.1.6",
