--- a/WebDev/saint-james-place/package.json
+++ b/WebDev/saint-james-place/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-google-maps/api": "^2.20.8",
     "framer-motion": "^12.33.0",
     "mongodb": "^6.21.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "nodemailer": "^8.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
